giving up fixing horizontal scroll

--- a/_sass/elementaire/_layout.scss
+++ b/_sass/elementaire/_layout.scss
@@ -12,7 +12,8 @@
     "menu menu";
   margin-bottom: 2em;
 
-  &__background {
+  &::before {
+    content: '';
     position: absolute;
     top: 21%;
     left: 50%;
